# uBlacklistRule

./: .dir-locals.el  .editorconfig  .editorconfig-checker.json  .envrc  .ghci  .gitignore  .hlint.yaml  .marksman.toml  .mcp.json  .stylish-haskell.yaml  LICENSE  README.md  _typos.toml  build  cabal.project  flake.nix  fourmolu.yaml  hie.yaml  package.yaml  renovate.json  stack.yaml  statix.toml  uBlacklist.txt  uBlacklistRule.cabal  uBlockOrigin.txt
.circleci/: config.yml
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml  git-commit-instructions.md  release.yml  zizmor.yml
.github/actions/setup-nix/: action.yml
.github/workflows/: check.yml  claude-code-review.yml  kyosei.yml
app/: Main.hs
asset/: abuse-likely-top-level-domain-site.txt  ch-site.txt  clickbait-site.txt  extension-explanation-site.txt  ghard-site.txt  gtranslate-site.txt  malware.txt  phishing.txt  proxy-site.txt  single-tech-site.txt  single-tech-sites.txt  third-level-domain.txt  top-level-domain.txt  top-level-only-domain.txt  video-site.txt  wikipedia-site.txt
src/: Code.hs  Host.hs  Import.hs  Run.hs  Title.hs  Type.hs  UBlacklist.hs  UBlockOrigin.hs  Ubl.hs  Ubo.hs
test/: HostSpec.hs  Main.hs  Spec.hs
test/Spec/: HostSpec.hs
